# Repassage-Qt

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
src/: main.cpp
src/db/: DatabaseManager.cpp  DatabaseManager.h
src/entities/: Commande.cpp  Commande.h  Livreur.cpp  Livreur.h
src/services/: CommandeService.cpp  CommandeService.h  LivreurService.cpp  LivreurService.h
src/ui/: CommandeWidget.cpp  CommandeWidget.h  LivreurWidget.cpp  LivreurWidget.h  MainWindow.cpp  MainWindow.h  StatistiquesWidget.cpp  StatistiquesWidget.h
